提交说明：优化了TCP服务，添加了Redis注册中心支持，改进了服务注册中心，解决了潜在问题，并关闭了配置文件监听功能。